--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
   <header>
     <h1>My Resume</h1>
     <p><strong>Capstone Project | Pau Sanchis Rota</strong></p>
-    <figure>
-      <img src="./objects/1734770985401.jpeg"
+      <img src="./Objects/Images/1734770985401.jpeg"
            alt="Foto de Pau Sanchis Rota" width="200">
-      <figcaption>Pau Sanchis Rota</figcaption>
-    </figure>
     <hr>
   </header>
 
