--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>My Resume</h1>
     <p><strong>Capstone Project | Pau Sanchis Rota</strong></p>
       <img src="./Objects/Images/1734770985401.jpeg"
-           alt="Foto de Pau Sanchis Rota" style="width:200"/>
+           alt="Foto de Pau Sanchis Rota" style="width:200px"/>
     <hr>
   </header>
 
